--- a/client/lampenhaus/src/components/ResultList/Result/Result.css
+++ b/client/lampenhaus/src/components/ResultList/Result/Result.css
@@ -1,11 +1,3 @@
-.collapseResult {
+.collapsable-results-headline {
     cursor: pointer;
-}
-
-.entityList .list-group-item {
-    cursor: pointer;
-}
-
-.entitiesAmount {
-    margin-left: 5px;
 }
