--- a/client/lampenhaus/src/components/CorrespondentView/CorrespondentView.css
+++ b/client/lampenhaus/src/components/CorrespondentView/CorrespondentView.css
@@ -2,3 +2,12 @@
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
+.card {
+    margin-bottom: 20px;
+}
+
+.correspondent-lists .card-body {
+    max-height: 300px;
+    overflow-y: auto;
+}
