--- a/client/lampenhaus/src/components/CorrespondentView/CorrespondentView.css
+++ b/client/lampenhaus/src/components/CorrespondentView/CorrespondentView.css
@@ -5,6 +5,12 @@
 
 .card {
     margin-bottom: 20px;
+    box-shadow: 0 0 10px 0 rgba(0,0,0,0.3);
+    transition: box-shadow 0.3s;
+}
+
+.card:hover {
+    box-shadow: 0 0 15px 0 rgba(0,0,0,0.5);
 }
 
 .correspondent-lists .card-body {
