--- a/client/lampenhaus/src/components/CorrespondentView/CorrespondentView.css
+++ b/client/lampenhaus/src/components/CorrespondentView/CorrespondentView.css
@@ -7,6 +7,7 @@
     margin-bottom: 20px;
     box-shadow: 0 0 10px 0 rgba(0,0,0,0.3);
     transition: box-shadow 0.3s;
+    border-radius: 0;
 }
 
 .card:hover {
