--- a/client/lampenhaus/src/components/CorrespondentView/Mailbox/Mailbox.css
+++ b/client/lampenhaus/src/components/CorrespondentView/Mailbox/Mailbox.css
@@ -1,5 +1,6 @@
 .tab-content {
     margin-top: 10px;
-    height: 500px;
+    max-height: 500px;
     overflow-y: scroll;
+    overflow-x: hidden;
 };
