fixed with react.fragment #frontend-hendrik

--- a/client/lampenhaus/src/components/CorrespondentView/CorrespondentView.css
+++ b/client/lampenhaus/src/components/CorrespondentView/CorrespondentView.css
@@ -2,6 +2,6 @@
     height: 300px;
 }
 
-.correspondent-list-content {
-    max-height: 225px;
+.correspondent-list .card-body {
+    overflow-y: hidden;
 }
