--- a/client/lampenhaus/src/components/Header/DatasetSelector/DatasetSelector.css
+++ b/client/lampenhaus/src/components/Header/DatasetSelector/DatasetSelector.css
@@ -1,10 +1,12 @@
-.dataselection-container {
+.dataset-selector-container {
     display: flex;
     justify-content: left;
     align-items: center;
+
 }
 
-span {
+.dataset-selector-text {
     float: left;
-    padding-right: 10px;
+    padding-right: 5px;
+    font-size: 1.1rem; 
 }
