--- a/client/lampenhaus/src/components/Graph/Graph.css
+++ b/client/lampenhaus/src/components/Graph/Graph.css
@@ -4,8 +4,9 @@ main {
     overflow: hidden;
 }
 
-.relayout-button {
+#relayout-button {
     z-index: 1;
     position: absolute;
-    left: 96%;
+    top: 10px;
+    right: 10px
 }
