--- a/client/lampenhaus/src/components/CorrespondentView/CorrespondentView.css
+++ b/client/lampenhaus/src/components/CorrespondentView/CorrespondentView.css
@@ -5,3 +5,11 @@
 .correspondent-list .card-body {
     overflow-y: hidden;
 }
+
+.correspondent-info-table {
+    width: 100%;
+}
+
+.correspondent-info-table-left-row {
+    font-style: oblique;
+}
