styling of the signatures button

--- a/client/lampenhaus/src/components/CorrespondentView/CorrespondentInfo/CorrespondentInfo.css
+++ b/client/lampenhaus/src/components/CorrespondentView/CorrespondentInfo/CorrespondentInfo.css
@@ -16,3 +16,9 @@
 #email-addresses-from-signature {
     white-space: pre-wrap; 
 }
+
+.signatures-button {
+    font-weight: bold;
+    font-size: 1rem;
+    margin-left: -10px;
+}
