WIP replace legend with newer package
and lots of linting and stuff

--- a/client/lampenhaus/src/components/Matrix/Matrix.css
+++ b/client/lampenhaus/src/components/Matrix/Matrix.css
@@ -14,3 +14,14 @@
 #matrix-container text.active {
   fill: red;
 }
+
+#matrix-selection-container {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
+
+#matrix-selection-text {
+  padding-right: 5px;
+  font-size: 1.1rem;
+}
