--- a/client/lampenhaus/src/components/Lampenhaus/Lampenhaus.css
+++ b/client/lampenhaus/src/components/Lampenhaus/Lampenhaus.css
@@ -5,8 +5,7 @@ html, body, #root, .lampenhaus {
 .lampenhaus-header {
     background-color: #aaa;
     color: white;
-    height: 70px;
-    padding: 20px;
+    padding: 20px 20px 0;
     text-align: center;
     margin-bottom: 20px;
 }
