--- a/client/lampenhaus/src/components/TopicList/TopicList.css
+++ b/client/lampenhaus/src/components/TopicList/TopicList.css
@@ -7,6 +7,7 @@
 
 .links line {
     stroke-opacity: 1;
+    stroke: #fff;
   }
    
   .nodes circle {
@@ -15,7 +16,11 @@
   }
 
 .TopicSpace{
-    width:700px;
-    height: 700px;
+    width:650px;
+    height: 650px;
     border-radius: 50%;
+}
+
+.innerSpace{
+    fill: rgba(0, 123, 255, 0.2)
 }
