Hover over links to show labels.

--- a/client/lampenhaus/src/components/TopicList/TopicList.css
+++ b/client/lampenhaus/src/components/TopicList/TopicList.css
@@ -7,12 +7,14 @@
 
 .links line {
     stroke-opacity: 1;
-    stroke: #fff;
+    stroke: rgba(255,255,255,0);
+    stroke-width: 6px;
+
 }
    
 .nodes circle {
-    stroke: #fff;
-    stroke-width: 1.5px;
+    stroke: rgba(255,255,255,1);
+    stroke-width: 6px;
 }
 
 .TopicSpace {
