--- a/client/lampenhaus/src/components/Graph/Graph.css
+++ b/client/lampenhaus/src/components/Graph/Graph.css
@@ -1,7 +1,10 @@
-main {
+main.graph {
     height: 100%;
     min-height: 600px;
     overflow: hidden;
+    position: relative;
+    margin: -20px;
+    padding: 20px;
 }
 
 #relayout-button {
