--- a/client/lampenhaus/src/components/TopicList/TopicList.css
+++ b/client/lampenhaus/src/components/TopicList/TopicList.css
@@ -6,12 +6,16 @@
 }
 
 .links line {
-    stroke: rgba(255,255,255,0);
-    stroke-width: 6px;
+    stroke: rgba(255, 255, 255, 0.6);
+    stroke-width: 3px;
 }
-   
+
+.links line:hover {
+    stroke: rgba(255, 255, 255, 1);
+}
+
 .nodes circle {
-    stroke: rgba(255,255,255,1);
+    stroke: rgba(255, 255, 255, 1);
 }
 
 .TopicSpace {
