--- a/client/lampenhaus/src/components/Lampenhaus/Lampenhaus.css
+++ b/client/lampenhaus/src/components/Lampenhaus/Lampenhaus.css
@@ -1,6 +1,7 @@
 * {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    border-radius: 0 !important;
 }
 
 html, body, #root, .lampenhaus {
