change styling and multiple ux issues and fix react errors

--- a/client/lampenhaus/src/components/Header/SearchBar/SearchBar.css
+++ b/client/lampenhaus/src/components/Header/SearchBar/SearchBar.css
@@ -20,6 +20,10 @@
     padding: 0;
 }
 
+#topic-threshold:focus {
+    box-shadow: none;
+}
+
 .email-classes label {
     text-transform: capitalize;
     padding-left: 25px;
