--- a/client/lampenhaus/src/assets/global.css
+++ b/client/lampenhaus/src/assets/global.css
@@ -1,18 +1,79 @@
-.card {
-    margin-bottom: 20px;
-    box-shadow: 0 0 10px 0 rgba(0,0,0,0.3);
-    transition: box-shadow 0.3s;
-    border-radius: 0;
+* {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    border-radius: 0 !important;
 }
 
-.card:hover {
-    box-shadow: 0 0 15px 0 rgba(0,0,0,0.5);
+html, body, #root, .lampenhaus {
+    height: 100%;
+}
+
+body {
+    background-color: #f3f3f3;
+}
+
+.entity-badge {
+    margin-right: 5px;
+}
+
+.input-group {
+    padding-bottom: 20px;
+}
+
+h4 {
+    font-size: 1.3rem;
+}
+
+h5 {
+    font-size: 1rem;
+}
+
+span[class^="fa fa-caret-"] {
+    width: 8px;
+}
+
+.row {
+    position: relative;
+}
+
+.card {
+    margin-bottom: 20px;
+}
+
+.card-header {
+    padding: 0.5rem 1rem;
+    background-color: white;
 }
 
 .card-body {
     overflow-y: auto;
+    padding: 0.5rem;
 }
 
 .cursor-pointer, .nav-item {
     cursor: pointer;
+}
+
+.list-group-item {
+    border-left: none;
+    border-right: none;
+    padding: 0.25rem 0.5rem;
+}
+
+.list-group-item:first-child {
+    border-top: none;
+}
+
+.list-group-item:last-child {
+    border-bottom: none;
+}
+
+.maximized {
+    position: absolute;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: 1000;
 }
