--- a/client/lampenhaus/src/components/EmailListView/EmailListView.css
+++ b/client/lampenhaus/src/components/EmailListView/EmailListView.css
@@ -1,3 +1,16 @@
+.email-count {
+    color: darkgray;
+    font-size: 0.9rem;
+}
+
+.sort {
+    height: 23px;
+}
+
+.sort button.btn {
+    padding: 0 0.25rem;
+}
+
 .term-histogram .card-body {
     height: 200px;
 }
