--- a/client/lampenhaus/src/components/Graph/Graph.css
+++ b/client/lampenhaus/src/components/Graph/Graph.css
@@ -1,14 +1,10 @@
-main.graph {
-    height: 100%;
-    min-height: 600px;
-    overflow: hidden;
-    position: relative;
-    margin: -20px;
-    padding: 20px;
+.graph {
+    height: calc(100% - 20px);
 }
 
-#relayout-button {
-    z-index: 1;
+.graph .card-body {
+    min-height: 400px;
+    overflow: hidden;
     position: relative;
-    left: calc(100% - 30px);
+    padding: 20px;
 }
