--- a/client/lampenhaus/src/components/Header/Header.css
+++ b/client/lampenhaus/src/components/Header/Header.css
@@ -1,8 +1,8 @@
 .lampenhaus-header {
-    background-color: #333;
+    background-color: #444448;
     color: white;
-    padding: 20px 15px 0;
-    margin-bottom: 20px;
+    padding-top: 1.3rem;
+    margin-bottom: 1rem;
 }
 
 .lampenhaus-title {
