--- a/client/lampenhaus/src/components/Lampenhaus/Lampenhaus.css
+++ b/client/lampenhaus/src/components/Lampenhaus/Lampenhaus.css
@@ -1,17 +1,3 @@
-* {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    border-radius: 0 !important;
-}
-
-html, body, #root, .lampenhaus {
+.lampenhaus {
     height: 100%;
-}
-
-.entity-badge {
-    margin-right: 5px;
-}
-
-.input-group {
-    padding-bottom: 20px;
 }
