--- a/client/lampenhaus/src/assets/global.css
+++ b/client/lampenhaus/src/assets/global.css
@@ -38,6 +38,7 @@ span[class^="fa fa-caret-"] {
 
 .card {
     margin-bottom: 20px;
+    position: relative;
 }
 
 .card-header {
@@ -70,10 +71,29 @@ span[class^="fa fa-caret-"] {
 
 .maximized {
     position: absolute;
-    display: inline-block;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     min-width: 100%;
     min-height: 100%;
+    max-width: 100%;
+    max-height: 100%;
     z-index: 1000;
+}
+
+.maximized .card {
+    height: calc(100% - 20px);
+}
+
+.blue-button {
+    color: #007bff;
+    cursor: pointer;
+}
+
+.text-ellipsis {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    display: block;
+    overflow: hidden;
 }
