--- a/client/lampenhaus/src/components/CorrespondentList/CorrespondentList.css
+++ b/client/lampenhaus/src/components/CorrespondentList/CorrespondentList.css
@@ -2,6 +2,11 @@
     margin-right: 5px;
 }
 
+.correspondent-link {
+    display: flex;
+    align-items: center;
+}
+
 .correspondent-list-content {
     overflow-y: scroll;
     max-height: calc(100% - 42px);
