--- a/client/lampenhaus/src/components/CorrespondentView/Mailbox/Mailbox.css
+++ b/client/lampenhaus/src/components/CorrespondentView/Mailbox/Mailbox.css
@@ -1,6 +1,13 @@
-#mailbox-content {
-    margin-top: 10px;
-    max-height: 500px;
-    overflow-y: scroll;
-    overflow-x: hidden;
-};
+.mailbox-wrapper {
+    display: flex;
+    flex-direction: column;
+    max-height: 100%;
+}
+
+.mailbox-wrapper .nav {
+    flex: 0 0 auto;
+}
+
+.mailbox-content {
+    overflow: auto;
+}
