--- a/client/lampenhaus/src/components/EmailView/EmailCard/EmailCard.css
+++ b/client/lampenhaus/src/components/EmailView/EmailCard/EmailCard.css
@@ -1,6 +1,6 @@
 .email-card .recipients {
     max-height: 200px;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .email-card .subject-line {
@@ -23,7 +23,7 @@
 
 .email-card .card-body {
     max-height: 500px;
-    overflow: scroll;
+    overflow: auto;
 }
 
 pre {
