--- a/client/lampenhaus/src/components/ResultList/Result/Result.css
+++ b/client/lampenhaus/src/components/ResultList/Result/Result.css
@@ -2,6 +2,7 @@
     cursor: pointer;
     display: flex;
     max-width: 100%;
+    align-items: flex-start;
 }
 
 .collapsible-results-headline p {
@@ -26,4 +27,9 @@ mark {
 .similar-date{
     color: darkgray;
     font-size: 0.9em;
+}
+
+.category-badge {
+    border: 1px solid darkgrey;
+    padding: 0 3px 0 3px;
 }
