css, linting and webpack

--- a/client/lampenhaus/src/components/ErrorLighthouse/ErrorLighthouse.css
+++ b/client/lampenhaus/src/components/ErrorLighthouse/ErrorLighthouse.css
@@ -1,30 +1,30 @@
-.error-image-wrapper {
-    height: 100%;
-}
-
 .error-image {
-    height: 80%;
-	width: 100%;;
-    transform: rotateX(0deg);
-    transition: transform 1s ease-in;
+    height: 90%;
+	width: 100%;
+    perspective: 400px;
 }
 
 .error-image svg {
     height: 100%;
 	width: 100%;
+    transform-style: preserve-3d;
 }
 
-.error-image:hover {
+.error-image:hover svg {
     transform: rotateX(180deg);
-    transition: transform 1s ease-in;
+    transition: transform 0.5s ease-in;
+    transform-style: preserve-3d;
+    transform-origin: 0 52%;
 }
 
 .error-image .ray {
-	transition: fill 0.5s ease-in;
+	transition: fill 0.5s ease-in, transform 0.5s ease-in;
+    transform-origin: 25% 18%;
 }
 
 .error-image:hover .ray {
 	fill: transparent;
+    transform: scale(1.5);
 }
 
 .error-image text {
