--- a/client/lampenhaus/src/components/Matrix/Matrix.css
+++ b/client/lampenhaus/src/components/Matrix/Matrix.css
@@ -15,6 +15,12 @@
   stroke: transparent;
 }
 
+#mini-matrix-container svg {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .matrix-container text {
   font-size: 0.7rem;
 }
