introduce error handling of failing request, error boundaries to all components in email list view meta#448
-refactor email list into own component and refactor reducers
-also remove seperate sorting actions/reducer
-adapt error boundaries
-make no result views better

--- a/client/lampenhaus/src/components/Graph/Graph.css
+++ b/client/lampenhaus/src/components/Graph/Graph.css
@@ -3,8 +3,7 @@
 }
 
 .graph .card-body {
-    min-height: 400px;
+    height: 400px;
     overflow: hidden;
     position: relative;
-    padding: 20px;
 }
