--- a/client/lampenhaus/src/assets/global.css
+++ b/client/lampenhaus/src/assets/global.css
@@ -55,6 +55,10 @@ span[class^="fa fa-caret-"] {
     padding: 0.5rem;
 }
 
+.alert {
+    padding: 0.375rem 0.75rem;
+}
+
 .cursor-pointer, .nav-item {
     cursor: pointer;
 }
