--- a/client/lampenhaus/src/components/TopicList/TopicList.css
+++ b/client/lampenhaus/src/components/TopicList/TopicList.css
@@ -11,6 +11,10 @@
     stroke: transparent;
 }
 
+.topic-card {
+    text-align: center;
+}
+
 .links line:hover {
     stroke: rgba(255, 255, 255, 1);
 }
@@ -20,7 +24,6 @@
 }
 
 .TopicSpace {
-    width: 650px;
     height: 650px;
     border-radius: 50%;
 }
