--- a/client/lampenhaus/src/components/TopicList/TopicList.css
+++ b/client/lampenhaus/src/components/TopicList/TopicList.css
@@ -13,6 +13,7 @@
 
 .topic-card {
     text-align: center;
+    overflow: hidden;
 }
 
 .links line:hover {
@@ -24,7 +25,7 @@
 }
 
 .TopicSpace {
-    height: 650px;
+    height: 100%;
     border-radius: 50%;
 }
 
