--- a/client/lampenhaus/src/components/CorrespondentView/CorrespondentInfo/CorrespondentInfo.css
+++ b/client/lampenhaus/src/components/CorrespondentView/CorrespondentInfo/CorrespondentInfo.css
@@ -1,3 +1,7 @@
+.info-content hr {
+    margin: 0.2rem 0;
+}
+
 .collapsible-correspondent-info-headline {
     cursor: pointer;
     padding: 5px;
@@ -21,11 +25,20 @@
 }
 
 .hierarchy-table td {
-    padding-right: 5px;
-    padding-left: 5px;
+    padding: 5px;
 }
 
 .hierarchy-table td:last-child {
     text-align: right;
     width: 40px;
 }
+
+.phone-numbers {
+    display: flex;
+    justify-content: space-between;
+}
+
+.phone-entries {
+    text-align: right;
+}
+
