adapted to hendriks requests

--- a/client/lampenhaus/src/components/Matrix/Matrix.css
+++ b/client/lampenhaus/src/components/Matrix/Matrix.css
@@ -16,8 +16,9 @@
 }
 
 #mini-matrix-container {
-  overflow: hidden;
+  overflow: auto;
   height: 100%;
+  padding: 8px;
 }
 
 #mini-matrix-container svg {
