--- a/client/lampenhaus/src/components/Matrix/Matrix.css
+++ b/client/lampenhaus/src/components/Matrix/Matrix.css
@@ -19,12 +19,7 @@
   overflow: auto;
   height: 100%;
   padding: 8px;
-}
-
-#mini-matrix-container svg {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+  text-align: center;
 }
 
 #big-matrix-container text {
