--- a/client/lampenhaus/src/assets/global.css
+++ b/client/lampenhaus/src/assets/global.css
@@ -16,6 +16,12 @@ body {
     background-color: #f3f3f3;
 }
 
+.cards-wrapper .container-fluid {
+    min-height: calc(100% - 2rem);
+    position: relative;
+    margin: 1rem 0;
+}
+
 .entity-badge {
     margin-right: 5px;
 }
@@ -34,10 +40,6 @@ h5 {
 
 span[class^="fa fa-caret-"] {
     width: 8px;
-}
-
-.row {
-    position: relative;
 }
 
 .card {
@@ -82,7 +84,7 @@ span[class^="fa fa-caret-"] {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100% ;
     min-width: 100%;
     min-height: 100%;
     max-width: 100%;
@@ -91,7 +93,8 @@ span[class^="fa fa-caret-"] {
 }
 
 .maximized .card {
-    height: calc(100% - 20px);
+    height: 100%;
+    margin-bottom: 0;
 }
 
 .blue-button {
