--- a/client/lampenhaus/src/components/Lampenhaus/Lampenhaus.css
+++ b/client/lampenhaus/src/components/Lampenhaus/Lampenhaus.css
@@ -1,3 +1,11 @@
 .lampenhaus {
     height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.cards-wrapper {
+    position: relative;
+    flex: 1 1 auto;
+    overflow: auto;
 }
