--- a/client/lampenhaus/src/components/EmailListView/EmailListView.css
+++ b/client/lampenhaus/src/components/EmailListView/EmailListView.css
@@ -1,12 +1,26 @@
-.top-correspondents .card-body {
-    height: 400px;
+.email-list-container {
+    grid-area: 1 / 1 / 10 / 5;
+}
+
+.top-correspondents-container {
+    grid-area: 1 / 5 / 10 / 10;
 }
 
 .term-histogram .card-body {
-    height: 220px;
 }
 
 .mini-matrix-card .card-body {
     overflow: hidden;
-    height: 400px;
+}
+
+.grid-container {
+    display: grid;
+    width: 100%;
+    min-width: 1500px;
+    height: 100%;
+    min-height: 800px;
+    grid: repeat(20, 1fr [row]) / repeat(20, 1fr [row]);
+    grid-gap: 10px;
+    place-items: stretch;
+    place-content: stretch;
 }
