add dummies and finalize grid css on email list view

--- a/client/lampenhaus/src/components/EmailListHistogram/EmailListHistogram.css
+++ b/client/lampenhaus/src/components/EmailListHistogram/EmailListHistogram.css
@@ -1,4 +1,9 @@
-.words { 
+.timeline-container .card-body {
+    height: 100%;
+    overflow: hidden;
+}
+
+.words {
     margin-left: 20px;
 }
 .word {
