--- a/client/lampenhaus/src/assets/global.css
+++ b/client/lampenhaus/src/assets/global.css
@@ -43,7 +43,6 @@ span[class^="fa fa-caret-"] {
 }
 
 .card {
-    margin-bottom: 20px;
     position: relative;
 }
 
@@ -79,22 +78,9 @@ span[class^="fa fa-caret-"] {
     border-bottom: none;
 }
 
-.maximized {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    min-width: 100%;
-    min-height: 100%;
-    max-width: 100%;
-    max-height: 100%;
+.maximized.grid-item {
+    grid-area: 1 / 1 / 21 / 21;
     z-index: 1000;
-}
-
-.maximized .card {
-    height: 100%;
-    margin-bottom: 0;
 }
 
 .blue-button {
@@ -123,5 +109,5 @@ span[class^="fa fa-caret-"] {
 }
 
 .hidden {
-    visibility: hidden;
+    display: none;
 }
