--- a/client/lampenhaus/src/components/Matrix/Matrix.css
+++ b/client/lampenhaus/src/components/Matrix/Matrix.css
@@ -1,30 +1,36 @@
 .matrix-container {
-  z-index: 10;
+    z-index: 10;
 }
 
 .matrix-container .background {
-  fill: #eee;
+    fill: #eee;
 }
 
 #big-matrix-container line {
-  stroke: #fff;
+    stroke: #fff;
 }
 
 #mini-matrix-container line {
-  stroke: transparent;
+    stroke: transparent;
 }
 
 #mini-matrix-container {
-  overflow: auto;
-  height: 100%;
-  padding: 8px;
-  text-align: center;
+    overflow: auto;
+    height: 100%;
+    padding: 8px;
+    text-align: center;
 }
 
 #big-matrix-container text {
-  font-size: 0.7rem;
+    font-size: 0.7rem;
 }
 
 #big-matrix-container text.active {
-  fill: red;
+    fill: red;
+}
+
+
+.mini-matrix-card .card-body {
+    overflow: hidden;
+    height: 100%;
 }
