--- a/client/lampenhaus/src/assets/global.css
+++ b/client/lampenhaus/src/assets/global.css
@@ -52,6 +52,14 @@ span[class^="fa fa-caret-"] {
     background-color: white;
 }
 
+.card-header-dropdown {
+    height: 23px;
+}
+
+.card-header-dropdown button.btn {
+    padding: 0 0.25rem;
+}
+
 .card-body {
     overflow-y: auto;
     padding: 0.5rem;
