--- a/client/lampenhaus/src/components/Matrix/Matrix.css
+++ b/client/lampenhaus/src/components/Matrix/Matrix.css
@@ -9,19 +9,14 @@
 
 #matrix-flex-container {
   display: inline-flex;
-  height: 870px;
-  width: 1880px;
+  width: 100%;
+  height: 100%;
 }
 
 #matrix-legend-container {
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
-  width: 250px;
-}
-
-#matrix-legend-container svg {
-  height: 200%;
-  width: 150px;
+  flex: 0 0 150px;
 }
 
 #big-matrix-container line {
