--- a/client/lampenhaus/src/components/Matrix/Matrix.css
+++ b/client/lampenhaus/src/components/Matrix/Matrix.css
@@ -46,7 +46,7 @@
 .matrix-container .row text:hover,
 .matrix-container .column text:hover {
   text-decoration: underline;
-  stroke-opacity: 0;
+  font-weight: bold;
 }
 
 .matrix-container .column text.active,
