--- a/client/lampenhaus/src/components/CorrespondentView/CorrespondentView.css
+++ b/client/lampenhaus/src/components/CorrespondentView/CorrespondentView.css
@@ -1,17 +1,21 @@
 .correspondent-view.grid-container {
-    grid: 2fr 2fr 1fr / 1fr 2fr 1fr;
+    grid: 2fr 1fr 1fr 1fr / 3fr 5fr 4fr;
 }
 
-.correspondent-view .email-list-container {
+.correspondent-view .info-card-container {
     grid-area: 1 / 1 / 3 / 2;
 }
 
+.correspondent-view .mailbox-container {
+    grid-area: 1 / 2 / 4 / 3;
+}
+
 .correspondent-view .timeline-container {
-    grid-area: 3 / 1 / 4 / 2;
+    grid-area: 4 / 2 / 5 / 3;
 }
 
 .correspondent-view .top-phrases-container {
-    grid-area: 1 / 2 / 2 / 3;
+    grid-area: 3 / 1 / 5 / 2;
 }
 
 .correspondent-view .top-correspondents-container {
@@ -19,9 +23,5 @@
 }
 
 .correspondent-view .topic-spaces-container {
-    grid-area: 2 / 2 / 4 / 3;
-}
-
-.correspondent-view .matrix-card-container {
-    grid-area: 2 / 3 / 4 / 4;
+    grid-area: 2 / 3 / 5 / 4;
 }
