Finish label cards.

--- a/client/lampenhaus/src/components/TopicSpace/TopicSpace.css
+++ b/client/lampenhaus/src/components/TopicSpace/TopicSpace.css
@@ -32,3 +32,10 @@
 .innerSpace {
     stroke-width: 10px;
 }
+
+.rect{
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    rx: 5px;
+    ry: 5px;
+}
