fix alex's remark

--- a/client/lampenhaus/src/components/EmailListView/EmailListView.css
+++ b/client/lampenhaus/src/components/EmailListView/EmailListView.css
@@ -4,7 +4,7 @@
 
 .term-timeline .card-body {
     height: 220px;
-    overflow: hidden;
+    overflow-y: hidden;
 }
 
 .mini-matrix-card .card-body {
