--- a/client/lampenhaus/src/components/EmailView/EmailView.css
+++ b/client/lampenhaus/src/components/EmailView/EmailView.css
@@ -23,3 +23,8 @@
 .email-view-container .topics-card .card-body {
     text-align: center;
 }
+
+.email-timeline .card-body {
+    height: 220px;
+    overflow-y: hidden;
+}
