--- a/client/lampenhaus/src/components/CorrespondentView/CorrespondentView.css
+++ b/client/lampenhaus/src/components/CorrespondentView/CorrespondentView.css
@@ -2,6 +2,10 @@
     grid: 2fr 1fr 1fr 1fr / 3fr 5fr 4fr;
 }
 
+.correspondent-view .grid-item.maximized {
+    grid-area: 1 / 1 / 5 / 4;
+}
+
 .correspondent-view .info-card-container {
     grid-area: 1 / 1 / 3 / 2;
 }
