--- a/client/lampenhaus/src/components/EmailView/EmailView.css
+++ b/client/lampenhaus/src/components/EmailView/EmailView.css
@@ -1,24 +1,36 @@
 .email-view.grid-container {
-    grid: fit-content(300px) 1fr fit-content(300px) / 3fr 1fr 1fr;
+    grid: 300px 1fr 230px / 3fr 2fr 1fr;
+}
+
+.email-view .grid-item.maximized {
+    grid-area: 1 / 1 / 4 / 4;
 }
 
 .email-view .email-container {
     grid-area: 1 / 1 / 3 / 2;
 }
 
-.email-view .cluster-container {
-    grid-area: 3 / 1 / 4 / 1;
-}
-
 .email-view .similar-mails-container {
     grid-area: 1 / 2 / 1 / 3;
+}
+
+.email-view .timeline-container {
+    grid-area: 3 / 1 / 4 / 2;
 }
 
 .email-view .topic-spaces-container {
     grid-area: 2 / 2 / 4 / 3;
 }
 
-.email-view-container .topics-card .card-body {
+.email-view .top-phrases-container {
+    grid-area: 1 / 3 / 2 / 4;
+}
+
+.email-view .cluster-container {
+    grid-area: 2 / 3 / 4 / 4;
+}
+
+.email-view .topics-card .card-body {
     text-align: center;
 }
 
