--- a/client/lampenhaus/src/components/Spinner/Spinner.css
+++ b/client/lampenhaus/src/components/Spinner/Spinner.css
@@ -2,7 +2,6 @@
     display: flex;
     justify-content: center;
     height: 100%;
-	max-height: 600px;
     align-items: center;
 }
 
@@ -11,6 +10,10 @@
 	width: 100%;
 	max-height: 200px;
 	max-width: 200px;
+}
+
+.loader svg {
+	max-height: 100%;
 }
 
 .ray {
