--- a/client/lampenhaus/src/components/Lampenhaus/Lampenhaus.css
+++ b/client/lampenhaus/src/components/Lampenhaus/Lampenhaus.css
@@ -170,7 +170,7 @@ span[class^="fa fa-caret-"] {
     color: rgb(33, 37, 41);
     background-color: transparent;
     border: none;
-    border-bottom: 3px solid #dee2e6;
+    border-bottom: 3px solid #007bff;
 }
 
 .lampenhaus .nav-tabs .nav-link,
