Fix sizing of category chart to fit card body

--- a/client/lampenhaus/src/components/CorrespondentView/CorrespondentView.css
+++ b/client/lampenhaus/src/components/CorrespondentView/CorrespondentView.css
@@ -24,6 +24,10 @@
 
 .categories-card .card-body {
     overflow: hidden;
+    height: 100%;
+    padding: 0;
+    position: relative;
+    top: 3px;
 }
 
 .correspondent-view .top-phrases-container {
